# auto-reviewer

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  projects.yaml  projects.yaml.example
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_project_health.sql  003_schedule_timezone.sql  004_project_settings.sql  005_drop_gitlab_project_id.sql  006_mr_review_agent_session.sql  007_mr_review_project_gates.sql  008_mr_scan_force.sql  009_mr_reviews_project_status_index.sql  010_pending_items_indexes.sql  011_runs_filter_indexes.sql  012_pending_open_by_project.sql  013_mr_review_chat_messages.sql  014_person_report_chat.sql  015_run_projects_person.sql  016_people_folder_name.sql  017_review_settings.sql
backend/src/: config.rs  dashboard.rs  db.rs  error.rs  executor.rs  identity.rs  lib.rs  main.rs  mr_change_materials.rs  mr_reviews.rs  pending_items.rs  person_trends.rs  projects.rs  report_chat.rs  reports.rs  review_settings.rs  runs.rs  schedule.rs  server.rs  state.rs  summary.rs  worker.rs  worktree.rs
backend/tests/: dashboard.rs  executor_cancellation.rs  foundation.rs  graceful_shutdown.rs  identity.rs  mr_reviews.rs  pending_items.rs  person_trends.rs  project_config.rs  report_chat.rs  report_reader.rs  review_settings.rs  run_cancellation.rs  runs_execution.rs  schedule_api.rs  scheduling.rs  worktree.rs
backend/tests/fixtures/: agent_turn_fail.cmd  agent_turn_fail.sh  agent_turn_ok.cmd  agent_turn_ok.py  agent_turn_ok.sh  fake_triage_eligible.py  flood_stdout.cmd  flood_stdout.py  flood_stdout.sh  report_chat_fail.cmd  (+9 more)
(+307 files in other folders)
