[package]
name = "reviewer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
app-env = { path = "../crates/app-env" }
axum = "0.8"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "8.0.4"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
